[package]
name = "aspiring-investments-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.0"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-sdk-ses = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.18", features = ["derive"] }
config = "0.14"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.22"
mime = "0.3"
tempfile = "3.0"
rand = "0.9.2"
aws-smithy-types = "1.3.2"